--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,8 @@
         "@typescript-eslint"
     ],
     "rules": {
-			"quotes":["error", "double"]
+			"quotes":["error", "double"],
+            "react/react-in-jsx-scope": "off",
+            "react/prop-types": 0
     }
 }
